<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       app:cardElevation="10dp"
                                       android:layout_margin="8dp"
                                       android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/title"

                      android:textSize="24sp"
                      android:textStyle="bold"
                      android:textAppearance="?android:textAppearanceMedium"
                      android:textColor="#000000"
                      android:layout_margin="20dp"
                      android:padding="5dp"
            />
            <EditText
                    android:id="@+id/et_title"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_margin="10dp"
                    android:padding="5dp"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="text"
            />


            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/description"
                      android:textSize="24sp"
                      android:textStyle="bold"
                      android:textAppearance="?android:textAppearanceMedium"
                      android:textColor="#000000"
                      android:layout_margin="20dp"
                      android:padding="5dp"
            />
            <EditText

                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|start"
                    android:maxLines="10"
                    android:id="@+id/et_description"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_margin="10dp"
                    android:padding="5dp"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:inputType="text"
            />


            <LinearLayout
                    android:weightSum="2"
                    android:padding="3dp"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <Button android:layout_width="0dp"
                        android:textStyle="bold"
                        android:text="@string/save"
                        android:id="@+id/btn_save"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <Button android:layout_width="0dp"
                        android:textStyle="bold"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/discard"
                        android:id="@+id/btn_discard"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>