<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   android:layout_margin="5dp"

                                   card_view:cardCornerRadius="2dp"
                                   card_view:contentPadding="3dp"
                                   card_view:cardElevation="4dp" android:layout_width="match_parent"
                                   android:id="@+id/list_row"
                                   android:padding="10dp"
                                   android:layout_height="wrap_content">


    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"

    >

        <LinearLayout
                android:id="@+id/ll"
                android:weightSum="2"
                android:layout_width="match_parent" android:layout_height="wrap_content">

            <ImageView

                    android:layout_margin="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/icon_of_the_list_view"

                    android:id="@+id/iv_logo"
            />


            <TextView
                    android:id="@+id/tv_title"
                    android:layout_margin="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    tools:text="TITLE"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"/>


        </LinearLayout>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_below="@id/ll"
                  android:layout_margin="10dp"
                  tools:text="Some dummy text"
                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                  android:textStyle="bold"
                  android:id="@+id/tv_descripton"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@id/tv_descripton"
                  android:layout_alignParentEnd="true"
                  android:text="@string/date"
                  android:textStyle="bold"
                  android:id="@+id/tv_date"
                  android:padding="4dp"
                  android:layout_alignParentRight="true"/>


        <LinearLayout android:layout_width="match_parent"
                      android:weightSum="2"
                      android:layout_below="@id/tv_date"
                      android:layout_height="wrap_content">


            <Button
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:text="@string/delete"
                    android:layout_weight="1"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:id="@+id/btn_delete"

            />

            <Button
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/update"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:id="@+id/btn_update"
            />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>